--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -42,7 +42,7 @@
                     <li class="list-group-item"><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong>
                         {{ trip.duration }}hrs</li>
                     <li class="list-group-item"><i class="far fa-clock fa-lg"></i> <strong>Start Time: </strong>
-                        {{ trip.start_time }}</li>
+                        {{ trip.start_time }} AM</li>
                     <li class="list-group-item"><i class="fas fa-map-marked-alt fa-lg"></i> <strong> Departure Location:
                         </strong> {{ trip.departure_location }}</li>
                     <li class="list-group-item"><i class="fas fa-euro-sign fa-lg"></i> {{ trip.adult_price }}
@@ -170,7 +170,7 @@
         </div>
        
         {% if user.is_authenticated %}
-        <div class="row md-spacing">
+        <div class="row mt-3">
         <!--User Reviews-->
         <form action="{% url 'submit_review' trip.id  user.id %}" method="POST" class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12 review-form" id="review-form">
             {% csrf_token %}
@@ -210,7 +210,7 @@
                 <textarea name="review" id="review" rows="10" class="form-control"></textarea>
             </div>
             <div class="col float-end">
-                <button type="submit" class="btn btn-next" id="btn-submit">Submit Review</button>
+                <button type="submit" class="btn btn-next btn-submit" id="btn-submit">Submit Review</button>
             </div>
             {% else %}
             <div class="row justify-content-md-center">
@@ -235,42 +235,49 @@
             {% for review in reviews %}
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card mb-3">
-                    <div class="col-md-10">
-                        <div class="card-body">
-                          <h5 class="card-title">{{ review.subject }}</h5>
-                          <div class="star-rating">
-                            <i class="fas fa-star{% if review.rating == 0.5 %}-half{% elif review.rating < 1 %}-o{%endif%}"></i>
-                            <i class="fas fa-star{% if review.rating == 1.5 %}-half{% elif review.rating < 2 %}-o{%endif%}"></i>
-                            <i class="fas fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o{%endif%}"></i>
-                            <i class="fas fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o{%endif%}"></i>
-                            <i class="fas fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o{%endif%}"></i>
-                          </div>
-                          <p class="card-text">{{ review.review }}</p>
-                        </div>
-                        <div class="row g-0">
-                            <div class="col-md-2">
-                               
-                                <img src="{{ review.user.userprofile.profile_img.url }}" class="img-fluid img-thumbnail rounded-circle" alt="user profile image">
-                        
-                            </div>
-                            <div class="col-md-10 user-div">
-                                <h6 class="d-inline"><span class="text-muted">by</span> {{ review.user.first_name|capfirst }}</h6>
-                                {% if review.updated_at %}
-                                <p class="card-text d-inline"><small class="text-muted">Updated on: {{ review.updated_at|date:"M d, Y" }}</small></p>
-                                {% else %}
-                                <p class="card-text d-inline"><small class="text-muted">Created on: {{ review.created_at|date:"M d, Y" }}</small></p>
-                                {% endif %}
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h5 class="card-title">{{ review.subject }}</h5>
                             </div>
                         </div>
+                        <div class="row">
+                        <div class="col">
+                            <div class="star-rating">
+                                <i class="fas fa-star{% if review.rating == 0.5 %}-half{% elif review.rating < 1 %}-o{%endif%}"></i>
+                                <i class="fas fa-star{% if review.rating == 1.5 %}-half{% elif review.rating < 2 %}-o{%endif%}"></i>
+                                <i class="fas fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o{%endif%}"></i>
+                                <i class="fas fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o{%endif%}"></i>
+                                <i class="fas fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o{%endif%}"></i>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="row">
+                        <div class="col">
+                            <p class="card-text">{{ review.review }}</p>
+                        </div>
+                        </div>
+                        <div class="row">
+                        <div class="col-md-4 col-sm-12 mb-1">
+                            <img src="{{ review.user.userprofile.profile_img.url }}" class="img-fluid img-thumbnail rounded-circle" alt="user profile image">
+                        </div>
+                        <div class="col-md-8 col-sm-12 user-div mt-1">
+                            <h6 class="d-inline"><span class="text-muted">by</span> {{ review.user.first_name|capfirst }}</h6>
+                            {% if review.updated_at %}
+                            <p class="card-text d-inline"><small class="text-muted">Updated on: {{ review.updated_at|date:"M d, Y" }}</small></p>
+                            {% else %}
+                            <p class="card-text d-inline"><small class="text-muted">Created on: {{ review.created_at|date:"M d, Y" }}</small></p>
+                            {% endif %}
+                        </div>
+                         </div>
                     </div>
-                  </div>
+                </div>
             </div>
             {% endfor %}
         </div>
         {% else %}
             <div class="col">
                 <p class="text-center">This Trip does not have any reviews yet.</p>
-
             </div>
         {% endif %}
         <div class="row">
