--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -4,7 +4,7 @@
 {% block extra_title %} Profile {% endblock %}
 
 {% block content %}
-<section class="main-content">
+<section class="main-content mt-3">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -25,6 +25,8 @@
           </div>
         </div>
         <a class="btn btn-more" href="{% url 'edit_profile' %}">Edit Your Profile</a>
+        <a class="btn btn-more" href="{% url 'add_trip' %}">Add Trip</a>
+        <a class="btn btn-more" href="{% url 'favourites' %}">Favourites</a>
     </div>
     <div class="row">
         <div class="col-12 col-lg-6">
