--- a/accounts/templates/accounts/favourites.html
+++ b/accounts/templates/accounts/favourites.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col">
                 <p class="result-count">
-                   <span class="results">{{ result_count }}</span> Saved Trips
+                   <span class="results">{{ fav_result_count }}</span> Saved Trips
                 </p>
                 
             </div>
@@ -71,11 +71,21 @@
             {% endfor %}
         </div>
         <!--Button to return to profile-->
-        {% if result_count == 0 %}
-            <p class="text-center">You have not added any trips to your favourites yet.</p>
-            <p>Checkout our experiences</p>
-            <!--button to go to the all trips-->
-        {% endif %}
+        <div class="row">
+            <div class="col text-center">
+                <a href="{% url 'profile' %}" class="btn-next btn">Go back to Profile</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                {% if fav_result_count == 0 %}
+                <h4 class="text-center">You have not added any trips to your favourites yet.</h4>
+                <h5 class="d-inline">Checkout our experiences</h5>
+                <!--button to go to the all trips-->
+                {% endif %}
+                <a href="{% url 'trips' %}" class="btn-next btn d-inline">Here</a>
+            </div>
+        </div>
     </div>
 </section>
     
