--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,8 @@
                     </li>
                     <!--favourite link-->
                     <li class="list-inline-item nav-item">
-                        <a class="nav-link text-white" href="">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link text-white" href="{% url 'favourites' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-heart fa-lg"></i></div>
                                 <p class="my-0">
@@ -128,6 +129,16 @@
                                 </p>
                             </div>
                         </a>
+                        {% else %}
+                        <a class="nav-link text-white" href="{% url 'login' %}">
+                            <div class="text-center">
+                                <div><i class="fas fa-heart fa-lg"></i></div>
+                                <p class="my-0">
+                                    0
+                                </p>
+                            </div>
+                        </a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
