--- a/templates/base.html
+++ b/templates/base.html
@@ -121,12 +121,18 @@
                     <!--favourite link-->
                     <li class="list-inline-item nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link text-white" href="{% url 'favourites' %}">
+                        <a class="nav-link {% if fav_result_count > 0 %} user-favourites {% else %} text-white {% endif %}" href="{% url 'favourites' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-heart fa-lg"></i></div>
+                                {% if fav_result_count > 0%}
                                 <p class="my-0">
-                                    1
+                                    {{ fav_result_count }}
                                 </p>
+                                {% else %}
+                                <p class="my-0">
+                                    0
+                                </p>
+                                {% endif %}
                             </div>
                         </a>
                         {% else %}
