Added style to the hart icon

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -137,6 +137,9 @@ a:active,
     font-size: 1.3rem;
 }
 
+.user-favourites {
+    color: #ef1018;
+}
 /***********************Index.html*/
 
 .card-info {
