Fix datepicker by adding unique id to each datepicker input

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -132,7 +132,7 @@
                                 <div class="input-group-prepend">
                                     <h4>Booking Date: <i class="far fa-calendar-alt"></i>
                                         <input type="text" class="calendar form-control datepicker" name="booking_date"
-                                            value="{{ item.booking_date }}" id="datepicker">
+                                            value="{{ item.booking_date }}" id="{{ item.trip_id }}">
                                     </h4>
                                 </div>
                             </div>
