--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -58,7 +58,7 @@
          <hr>  
         {% endfor %}
         <!--Order Form-->
-        <div class="row justify-content-md-center m-2">
+        <div class="row justify-content-md-center mt-4 mb-2">
             <div class="col-lg-8 col-md-8 col-sm-12 text-center">
                 <h4>Please fill out the form below to complete your order</h4>
                 <form action="{% url 'checkout' %}" method="POST" id="purchase-form">
