Added margin and padding to the form elements

--- a/accounts/templates/accounts/forgot_password.html
+++ b/accounts/templates/accounts/forgot_password.html
@@ -12,15 +12,17 @@
             </div>
         </div>
         
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center mt-4 spacing">
             <div class="col-lg-6 col-md-8 col-sm-12">
-                <form class="row g-3" action="{% url 'forgot_password' %}" method="POST">
+                <form class="row g-3 login-form" action="{% url 'forgot_password' %}" method="POST">
                   {% csrf_token %}
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address:</label>
                     <input type="email" autofocus class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                   </div>
-                    <button type="submit" class="btn btn-next">Submit</button>
+                  <div class="mb-3">
+                    <button type="submit" class="btn btn-next w-100">Submit</button>
+                  </div>
                 </form>
             </div>
         </div>
