--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -12,9 +12,9 @@
             </div>
         </div>
         
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center mt-4 p-1">
             <div class="col-lg-6 col-md-8 col-sm-12">
-                <form class="row g-3" action="{% url 'reset_password' %}" method="POST">
+                <form class="row g-3 login-form" action="{% url 'reset_password' %}" method="POST">
                   {% csrf_token %}
                   <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Create Password:</label>
@@ -24,7 +24,9 @@
                     <label for="exampleInputPassword2" class="form-label">Confirm Password:</label>
                     <input type="password" class="form-control" id="exampleInputPassword2" name="password-2">
                   </div>
-                    <button type="submit" class="btn btn-next">Reset</button>
+                  <div class="mb-3">
+                    <button type="submit" class="btn btn-next w-100">Reset</button>
+                  </div>
                 </form>
             </div>
         </div>
