--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -9,11 +9,13 @@
         <div class="row justify-content-center">
             <div class="col-md-auto mt-3">
                 <h2>Trip Managment</h2>
-                <h4>Add a new Trip here</h4>
             </div>
         </div>
-        <div class="row justify-content-md-center mb-1 mt-1">
-            <div class="col-lg-8 col-md-8 col-sm-12">
+        <div class="row login-form justify-content-md-center m-0 p-1 mb-1 mt-4">
+            <div class="col-12 text-center mt-2">
+              <h4>Add a new Trip here</h4>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12 p-1">
                 <form class="row g-3" action="{% url 'add_trip' %}" method="POST" enctype="multipart/form-data">
                    {% csrf_token %}
                    <div class="form-row col-12">
@@ -25,8 +27,8 @@
                     {{ form.category }}
                   </div>
                   <div class="form-row col-md-6">
-                    <label for="category" class="form-label">Provider:</label>
-                    {{ form.provider }}
+                    <label for="category" class="form-label">Number of Ticket:</label>
+                    {{ form.num_tickets }}
                   </div>
                   <div class="form-row col-12">
                     <label for="short_description" class="form-label">Short Description:</label>
@@ -57,14 +59,6 @@
                     {{ form.departure_location }}
                   </div>
                   <div class="form-row col-md-6">
-                    <label for="from_date" class="form-label">Availability from date:</label>
-                    {{ form.from_date }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="to_date" class="form-label">Availability to date:</label>
-                    {{ form.to_date }}
-                  </div>
-                  <div class="form-row col-md-6">
                     <label for="adult_price" class="form-label">Adult Price:</label>
                     {{ form.adult_price }}
                   </div>
@@ -82,36 +76,36 @@
                   </div>
                   <div class="form-row col-md-6">
                     <label for="special_offers" class="form-label">Family Friendly:</label>
-                    <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly checked">
+                    <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly" checked>
                   </div>
-                    <!--link back to the trips-->
-                    <div class="submit-button text-right mt-5 mb-2">
-                        <a href="{% url 'trips' %}" class="btn btn-dropdown">
-                            <span class="icon">
-                                <i class="fas fa-chevron-left"></i>
-                            </span>
-                            <span class="font-weight-bold">Cancel</span>
-                        </a>
-                        <!--submit button-->
-                        <button id="submit-button" class="btn add-quantity">
-                            <span class="font-weight-bold">Add Trip</span>
-                            <span class="icon">
-                                <i class="fas fa-lock"></i>
-                            </span>
-                        </button>
+                  <div class="form-row d-flex justify-content-center">
+                    <div class="col-md-4 col-sm-12">
+                      <a href="{% url 'trips' %}" class="btn btn-dropdown">
+                        <span class="icon">
+                          <i class="fas fa-times"></i>
+                        </span>
+                        <span class="font-weight-bold">Cancel</span>
+                      </a>
                     </div>
-                    {{ form.email.errors }}
+
+                    <div class="col-md-4 col-sm-12">
+                       <!--submit button-->
+                      <button id="submit-button" class="btn btn-dropdown">
+                        <span class="font-weight-bold">Add Trip</span>
+                        <span class="icon">
+                          <i class="fas fa-plus"></i>
+                        </span>
+                      </button>
+                    </div>
                     {{ form.non_field_errors }}
+                    {{ form.errors }}
+                  
+                  </div>
                 </form>
             </div>
         </div>
-        
     </div>
 </section>
 
 
 {% endblock %}
-
-
-
-
