--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -80,7 +80,7 @@
                   </div>
                   <div class="form-row d-flex justify-content-center">
                     <div class="col-md-4 col-sm-12">
-                      <a href="{% url 'trips' %}" class="btn btn-dropdown">
+                      <a href="{% url 'trips' %}" class="btn btn-dropdown cancel-btn">
                         <span class="icon">
                           <i class="fas fa-times"></i>
                         </span>
@@ -90,7 +90,7 @@
 
                     <div class="col-md-4 col-sm-12">
                        <!--submit button-->
-                      <button id="submit-button" class="btn btn-dropdown">
+                      <button id="submit-button" class="btn btn-dropdown add-btn">
                         <span class="font-weight-bold">Add Trip</span>
                         <span class="icon">
                           <i class="fas fa-plus"></i>
