Added a link to update_trip.html

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -171,6 +171,9 @@
                 <p>You may cancel your trip 24hrs in advance to get a full refund.
                     Any trips cancelled less than 24hrs in advance will not qualify for a refund.
                 </p>
+                <a href="{% url 'update_trip' trip.id %}" class="btn">
+                    <i class="fas fa-plus"></i>Update Trip
+                </a>
             </div>
         </div>
        
